Fix problems with the main page and navbar

--- a/public/css/components/hablanos.css
+++ b/public/css/components/hablanos.css
@@ -2,7 +2,7 @@
 
 /* Contenedor de la sección */
 .hablanosContainer {
-    width: 1358px;
+    width: 100%;
     display: flex;
     justify-content: center;
     margin-bottom: 256px;
