--- a/public/css/components/servicios-academia/objetivos-card.css
+++ b/public/css/components/servicios-academia/objetivos-card.css
@@ -44,7 +44,7 @@
     margin-top: 80px;
     margin-left: auto;  /* Centra el contenedor automáticamente */
     margin-right: auto;
-    width: 1079px;
+    width: 70%;
     height: 124px;
     flex-shrink: 0;
     color: #FFF;
