--- a/public/css/components/servicios-academia/objetivos-de-la-incorporacion-de-hci.css
+++ b/public/css/components/servicios-academia/objetivos-de-la-incorporacion-de-hci.css
@@ -32,7 +32,7 @@
 }
 
 .objetivos-card {
-    background-image: url("{{ asset('img/formacion-interdiciplinaria.png') }}");
+    /*background-image: url("{{ asset('img/formacion-interdiciplinaria.png') }}");
     background-size: cover; /* Esto cubre todo el contenedor */
     background-position: center; /* Esto centra la imagen dentro del contenedor */
     background-repeat: no-repeat; /* Esto evita que la imagen se repita */
