--- a/public/css/components/servicios-industria/capacitacion-y-formacion.css
+++ b/public/css/components/servicios-industria/capacitacion-y-formacion.css
@@ -1,6 +1,6 @@
 /* Estilo del contenedor de la sección */
 .capacitacionYFormacionContainer {
-    width: 1728px;
+    width: 100%;
     height: 2048px;
     display: flex;
     flex-wrap: wrap;
@@ -24,7 +24,7 @@
 /* Estilo para más información de la sección */
 .masInformacionCapacitacionYFormacionContainer {
     margin-top: 80px;
-    width: 1728px;
+    width: 100%;
     height: 435px;
     flex-shrink: 0;
 }
