--- a/public/css/components/servicios-industria/consultoria-en-u-x-u-i.css
+++ b/public/css/components/servicios-industria/consultoria-en-u-x-u-i.css
@@ -1,6 +1,6 @@
 /* Estilo del contenedor de la sección */
 .consultoriaEnUX-UIContainer {
-    width: 1728px;
+    width: 100%;
     height: 2135px;
     display: flex;
     flex-wrap: wrap;
@@ -10,6 +10,8 @@
 
 /* Estilo para el titulo de la sección */
 .consultoriaEnUX-UITitle {
+    width: 100%;
+    text-align: center;
     color: #000;
     font-family: Montserrat;
     font-size: 55px;
@@ -23,7 +25,7 @@
 
 /* Contenedor del subtítulo de la sección */
 .consultoriaEnUX-UISubtitleContainer {
-    width: 1728px;
+    width: 100%;
     height: 435px;
     margin-top: 89px;
     margin-bottom: 80px;
