--- a/public/css/components/servicios-industria/desarrollo-comercial.css
+++ b/public/css/components/servicios-industria/desarrollo-comercial.css
@@ -2,7 +2,7 @@
 .desarrolloComercialContainer {
     margin-top: 160px;
     margin-bottom: 160px;
-    width: 1728px;
+    width: 100%;
     height: 616px;
     flex-shrink: 0;
     display: flex;
@@ -27,7 +27,7 @@
 
 /* Estilo del texto de la sección */
 .desarrolloComercialText {
-    width: 1392px;
+    width: 100%;
     color: #FAFAF9;
     text-align: justify;
     font-family: Montserrat;
@@ -36,4 +36,6 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.64px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
