--- a/public/css/components/servicios-industria/desarrollo-de-prototipos.css
+++ b/public/css/components/servicios-industria/desarrollo-de-prototipos.css
@@ -1,6 +1,6 @@
 /* Estilo del contenedor de la sección */
 .desarrolloDePrototiposContainer {
-    width: 1728px;
+    width: 100%;
     height: 2355px;
     display: flex;
     flex-wrap: wrap;
@@ -23,6 +23,7 @@
 
 /* Estilo para el subtitulo de la sección */
 .desarrolloDePrototiposSubtitle {
+    width: 100%;
     margin-top: 108px;
     margin-bottom: 60px;
     color: #000;
@@ -39,7 +40,7 @@
 .creacion-de-prototipo {
     margin-top: 58px;
     margin-bottom: 128px;
-    width: 1728px;
+    width: 100%;
     height: 631px;
     flex-shrink: 0;
     display: flex;
@@ -48,7 +49,7 @@
 
 /* Estilo del texto de la subsección */
 .creacion-de-prototipo-text {
-    width: 1195px;
+    width: 100%;
     margin-top: 159px;
     color: #FFF;
     text-align: center;
@@ -58,4 +59,6 @@
     font-weight: 700;
     line-height: normal;
     letter-spacing: 0.32px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
