--- a/public/css/components/servicios-industria/servicios-industria-card.css
+++ b/public/css/components/servicios-industria/servicios-industria-card.css
@@ -1,7 +1,7 @@
 /* Estilo de las cards */
 .serviciosIndustriaCard { 
     flex: 0 0 auto;
-    width: 626px;
+    width: 34%;
     height: 443px;
     background: #F9F9F9;
     display: flex;
@@ -26,6 +26,7 @@
 
 /* Estilo del texto de la card */
 .serviciosIndustriaCardText { 
+    width: 100%;
     margin-left: 30px;
     margin-right: 30px;
     color: #000;
