--- a/public/css/components/servicios-industria/servicios-para-la-industria.css
+++ b/public/css/components/servicios-industria/servicios-para-la-industria.css
@@ -1,6 +1,6 @@
 /* Contenedor de la sección */
 .serviciosParaLaIndustriaContainer{
-    width: 1728px;
+    width: 100%;
     height: 597px;
     display: flex;
     justify-content: center;
@@ -25,7 +25,7 @@
 
 /* Descripción de la sección */
 .serviciosParaLaIndustriaDescription{
-    width: 1234px;
+    width: 80%;
     height: 312px;
     color: #000;
     text-align: center;
