serivicios:industria terminado

--- a/public/css/components/information-card.css
+++ b/public/css/components/information-card.css
@@ -76,7 +76,7 @@
     width: 100%;
     flex-shrink: 0;
     color: #000;
-    text-align: justify;
+    text-align: left;
     font-family: Montserrat;
     font-size: 32px;
     font-style: normal;
