--- a/public/css/components/servicios-industria/desarrollo-comercial.css
+++ b/public/css/components/servicios-industria/desarrollo-comercial.css
@@ -2,7 +2,7 @@
 .desarrolloComercialContainer {
     margin-top: 160px;
     margin-bottom: 160px;
-    width: 1728px;
+    width: 100%;
     height: 616px;
     flex-shrink: 0;
     display: flex;
@@ -27,13 +27,13 @@
 
 /* Estilo del texto de la sección */
 .desarrolloComercialText {
-    width: 1392px;
+    width: 85%;
     color: #FAFAF9;
     text-align: justify;
     font-family: Montserrat;
-    font-size: 32px;
+    font-size: 28px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 250;
     line-height: normal;
     letter-spacing: 0.64px;
 }
