--- a/public/css/components/servicios-industria/tecnicas-de-estudio-de-usabilidad.css
+++ b/public/css/components/servicios-industria/tecnicas-de-estudio-de-usabilidad.css
@@ -1,6 +1,6 @@
 /* Estilos para el contenedor de la sección */
 .tecnicasDeEstudioDeUsabilidadContainer {
-    width: 1728px;
+    width: 100%;
     height: 1171px;
     display: flex;
     flex-wrap: wrap;
@@ -54,9 +54,10 @@
     width: 100%;
     height: 473px;
     display: flex;
-    overflow-x: hidden; /* Ocultar la barra de desplazamiento por defecto */
+   
     gap: 6px;
     box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 /* Mostrar la barra de desplazamiento al hacer hover */
