--- a/public/css/components/eventos/eventos.css
+++ b/public/css/components/eventos/eventos.css
@@ -2,12 +2,10 @@ body {
     width: 100vw;
 }
 
-.carousel {
-}
-
 .carousel-inner {
-    width: 100%;
-    margin: auto;
+    /* width: 100%; */
+    /* margin: auto; */
+    object-fit: contain;
 }
 
 /* PRUEBA - ESTO ES TEMPORAL */
@@ -16,38 +14,47 @@ body {
 }
 
 .carousel-caption {
-    margin: 0 auto;
-    width: 100%;
+    /* margin: 0 auto; */
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
     border: solid orange 5px;
+    box-sizing: border-box;
+    /* padding: 20px; */
 }
 
 .titulousalab {
     width: 100%;
-    border: solid white 5px;
+    border: solid lightgreen 5px;
+}
+
+.img-container {
+    width: 100%;
+    border: solid red 5px;
 }
 
 .img1 {
    width: 100%;
-   border: solid darkgray 5px;
+   border: solid white 5px;
 }
 
 .eventos-window-container {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     width: 100%;
     border: solid red 5px;
 }
 
 .contenidousalab {
-    width: 100%; 
-    height: 248px;
-    display: flex;
+    /* width: 100%;  */
+    /* height: 248px; */
+    /* display: flex; */
     /* margin-bottom: -288px; */
     /* margin-left: -260px; */
     flex-shrink: 0;
     background: rgba(192, 192, 192, 0.30);
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     animation: contenidousalab 1.5s forwards;
-    border: solid yellow 5px;
+    border: solid cyan 5px;
 }
