--- a/public/css/components/eventos/eventos.css
+++ b/public/css/components/eventos/eventos.css
@@ -14,47 +14,45 @@ body {
 }
 
 .carousel-caption {
-    /* margin: 0 auto; */
-    /* width: 100%; */
+    height: 60%;
     display: flex;
     flex-direction: column;
-    border: solid orange 5px;
+    justify-content: space-between;
     box-sizing: border-box;
-    /* padding: 20px; */
+    bottom: 0;
 }
 
 .titulousalab {
     width: 100%;
-    border: solid lightgreen 5px;
+    height: auto;
+}
+
+.titulousalabtxt {
+    font-size: 3rem;
+    font-weight: bolder;
 }
 
 .img-container {
     width: 100%;
-    border: solid red 5px;
 }
 
 .img1 {
    width: 100%;
-   border: solid white 5px;
 }
 
 .eventos-window-container {
     display: flex;
-    /* flex-wrap: wrap; */
     width: 100%;
-    border: solid red 5px;
 }
 
-.contenidousalab {
-    /* width: 100%;  */
-    /* height: 248px; */
-    /* display: flex; */
-    /* margin-bottom: -288px; */
-    /* margin-left: -260px; */
-    flex-shrink: 0;
+/* .contenidousalab {
     background: rgba(192, 192, 192, 0.30);
-    /* justify-content: center; */
-    /* align-items: center; */
     animation: contenidousalab 1.5s forwards;
-    border: solid cyan 5px;
+} */
+
+.contenidousalabtxt {
+    max-width: 100%;
+    height: 100%;
+    font-size: 1.3rem;
+    line-height: normal;
 }
