--- a/public/css/components/eventos/cardsEventos.css
+++ b/public/css/components/eventos/cardsEventos.css
@@ -1,15 +1,15 @@
 /************************Estilo para el contenedor para una card *********************/
-
 .contenedorCard {
-    width: 22%;
+    flex: 1 1 calc(25% - 1rem);
     border-radius: var(--Corner-Medium, 12px);
     overflow: hidden;
     position: relative;
+    height: 100%;
 }
 
 .ContenedorSVG {
     width: 100%;
-    height: auto;
+    height: 45%;
     position: absolute;
     top: 0;
     left: 0;
@@ -17,24 +17,23 @@
 
 .ContenedorSVG svg {
     width: 102%;
-    height: auto;
+    height: 100%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     fill-opacity: 0.90;
 }
 
 /************************Estilo para el  titulo de una cards *********************/
-
 .contenedorTituloCard {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 50%;
     z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 2rem;
+    padding: 1rem 1.5rem;
+    margin-top: 1rem;
 }
 
 .tituloCard {
@@ -46,3 +45,58 @@
     line-height: normal;
     letter-spacing: 0.32px;
 }
+
+
+@media (min-width: 1921px) {
+    .tituloCard {
+        font-size: 1.6rem;
+    }
+
+    .contenedorTituloCard {
+        margin-top: 0.6rem;
+        padding: 0.6rem 1.2rem;
+    }
+}
+
+@media (max-width: 1440px) {
+    .contenedorCard {
+        flex: 1 1 calc(50% - 4rem);
+        max-width: 35%;
+        height: calc(50% - 2rem);
+    }
+}
+
+@media (max-width: 768px) {
+    .contenedorCard {
+        flex: 1 1 calc(50% - 1rem);
+        max-width: 50%;
+        height: calc(50% - 2rem);
+    }
+
+    .tituloCard {
+        font-size: 1.2rem;
+    }
+
+    .contenedorTituloCard {
+        margin-top: 0.6rem;
+        padding: 0.6rem 1.2rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .contenedorCard {
+        flex: 1 1 100%;
+        max-width: 100%; 
+        height: calc(25% - 2rem);
+    }
+
+    .tituloCard {
+        font-size: 1.2rem;
+    }
+
+    .contenedorTituloCard {
+        margin-top: 0.6rem;
+        padding: 0.6rem 1.2rem;
+    }
+}
+
