--- a/public/css/components/eventos/concursos.css
+++ b/public/css/components/eventos/concursos.css
@@ -7,18 +7,18 @@
     flex-wrap: wrap;
 }
 
-.contenedorSubtituloConcursos{
+.contenedorSubtituloConcursos {
     display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
 }
 
-.subtituloConcursos{
+.subtituloConcursos {
     color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 55px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -35,4 +35,10 @@
     flex-shrink: 0;
     margin-top: 80px;
     margin-bottom: 160px;
+}
+
+@media (min-width: 1921px) {
+    .subtituloConcursos {
+        font-size: 4rem;
+    }
 }
