--- a/public/css/components/eventos/eventos.css
+++ b/public/css/components/eventos/eventos.css
@@ -45,14 +45,37 @@ body {
     width: 100%;
 }
 
-/* .contenidousalab {
-    background: rgba(192, 192, 192, 0.30);
-    animation: contenidousalab 1.5s forwards;
-} */
-
 .contenidousalabtxt {
     max-width: 100%;
     height: 100%;
+    min-height: auto;
     font-size: 1.3rem;
     line-height: normal;
+    overflow: visible;
+}
+
+@media (max-width: 1440px) {
+    .contenidousalab {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .titulousalabtxt {
+        font-size: 2rem;
+    }
+
+    .contenidousalabtxt {
+      font-size: 0.8rem; 
+    }
+}
+
+@media (min-width: 1921px) {
+    .titulousalabtxt {
+        font-size: 5rem;
+    }
+
+    .contenidousalabtxt {
+      font-size: 2rem;
+    }
 }
