--- a/public/css/components/eventos/lightBox_carousel.css
+++ b/public/css/components/eventos/lightBox_carousel.css
@@ -1,9 +1,8 @@
 /* Carousel */
 .contenedorImageText {
     display: flex;
-    /* width: 1126px; */
     width: 100%;
-    height: 114px;
+    height: auto;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -40,8 +39,9 @@
 
 /* Animaciones para el texto adicional */
 .extra-text {
-    width: 667px;
-    height: 147px;
+    width: 50%;
+    /* height: auto; */
+    height: 40%;
     transition: opacity 0.5s ease, transform 0.5s ease;
     opacity: 0;
     font-size: 1rem;
@@ -67,7 +67,7 @@
 
 .btn-mas-info {
     /* Layout */
-    width: 280.64px;
+    width: 40%;
     height: 60px;
     flex-shrink: 0;
     
@@ -111,17 +111,52 @@
     display: none;
 }
 
+@media (min-width: 1921px) {
+    .tipografiaImageText {
+        font-size: 2.5rem;
+    }
+    
+    .extra-text {
+        font-size: 1.2rem;
+    }
+}
 
-/* Responsividad para textos */
+@media (max-width: 1440px) {
+    .tipografiaImageText {
+        font-size: 1.5rem;
+    }
+    
+    .extra-text {
+        font-size: 0.8rem;
+    }
+}
+
 @media (max-width: 768px) {
-    .tipografiaImage1Text,
-    .tipografiaImage2Text,
-    .tipografiaIm5ge3Text {
-        font-size: 45px; /* Reducir tamaño de títulos */
+    .tipografiaImageText {
+        font-size: 1.2rem;
+    }
+    
+    .carousel-item img {
+        height: 30vh;
+        object-fit: cover;
     }
 
     .extra-text {
         font-size: 1rem; /* Ajustar tamaño del texto adicional */
         right: 5%; /* Ajustar posición para pantallas pequeñas */
+    }
+
+    .slide-title.shrink {
+        display: none;
+    }
+
+    .extra-text {
+        width: 85%;
+    }
+}
+
+@media (max-width: 425px) {
+    .tipografiaImageText {
+        font-size: 0.8rem;
     }
 }
