--- a/public/css/components/eventos/proximosEventos.css
+++ b/public/css/components/eventos/proximosEventos.css
@@ -2,10 +2,10 @@
     color: #000;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    font-size: 80px;
+    font-size: 4rem;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
+    line-height: normal;;
 }
 
 .ProximosEventosContenedorTitulo {
@@ -37,15 +37,15 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 .SubtituloConferencias{
     color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 55px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -67,7 +67,7 @@
     color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 55px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -85,10 +85,12 @@
 
 .contenedorCardsEventos {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
-    height: 35vh;
-    margin-top: 80px;
+    height: 45vh;
+    margin-top: 4rem;
+    gap: 1rem;
 }
 
 /************************Estilo para el separador a final de la seccion *********************/
@@ -98,4 +100,73 @@
     height: 2px;
     background: #DADADA;
     margin-top: 160px;
+}
+
+@media (min-width: 1921px) {
+    .ProximosEventosTitulo {
+        font-size: 5rem;
+    }
+    
+    .SubtituloConferencias,
+    .subtituloConferencistas {
+        font-size: 4rem;
+    }
+}
+
+@media (max-width: 1440px) {
+    .ContenedorSubtituloConferencias,
+    .ContenedorSubtituloConferencistas {
+        margin-bottom: 3rem;
+        margin-top: 3rem;
+    }
+    
+    .contenedorCardsEventos {
+        height: 90vh;
+        gap: 4rem;
+        margin-top: 3rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .ProximosEventosTitulo {
+        font-size: 3rem;
+    }
+
+    .ContenedorSubtituloConferencias,
+    .ContenedorSubtituloConferencistas {
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+    }
+
+    .SubtituloConferencias,
+    .subtituloConferencistas {
+        font-size: 2rem;
+    }
+
+    .contenedorCardsEventos {
+        gap: 1rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .ProximosEventosTitulo {
+        font-size: 2rem;
+    }
+
+    .SubtituloConferencias,
+    .subtituloConferencistas {
+        font-size: 1.5rem;
+    }
+
+    .ContenedorSubtituloConferencias,
+    .contenedorSubtituloConferencistas {
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+    }
+
+    .contenedorCardsEventos {
+        height: 180vh;
+        gap: 0rem;
+        margin-top: 0.5rem;
+    }
 }
