--- a/public/css/components/eventos/talleres.css
+++ b/public/css/components/eventos/talleres.css
@@ -11,24 +11,22 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: 160px;
-    margin-bottom: 80px;
+    margin-top: 8rem;
+    margin-bottom: 4rem;
 }
 
 .subtituloTalleres{
     color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 55px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
 }
 
-/**********************************************/
 
 /*        Talleristas                  */
-
 .contenedorTalleristas {
     display: flex;
     flex-direction: column;
@@ -36,19 +34,11 @@
     width: 95%;
 }
 
-/* .contenedorTalleristas {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 0px;
-} */
-
 .subtituloTalleristas {
     color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 55px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -62,23 +52,16 @@
     margin-top: 150px;
     margin-bottom: 0px;
 }
+
 /************************Estilo para el contenedor de toda la subseccion conferencistas cards *********************/
-
-/* .contenedorCards {
-    position: relative;
-    width: 1509px;
-    height: 436px;
-    margin-top: 80px;
-    display: flex;
-    gap: 37.91px;
-} */
-
 .contenedorCards {
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
-    height: 35vh;
-    margin-top: 80px;
+    height: 45vh;
+    margin-top: 4rem;
+    gap: 1rem;
 }
 
 /************************Estilo para el separador a final de la seccion *********************/
@@ -88,4 +71,59 @@
     height: 2px;
     background: #DADADA;
     margin-top: 160px;
+}
+
+@media (min-width: 1921px) {
+    .subtituloTalleres,
+    .subtituloTalleristas {
+        font-size: 4rem;
+    }
+}
+
+@media (max-width: 1440px) {
+    .contenedorSubtituloTalleres,
+    .contenedorSubtituloTalleristas {
+        margin-top: 3rem;
+    }
+    
+    .contenedorCards {
+        height: 90vh;
+        gap: 4rem;
+        margin-top: 3rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .contenedorSubtituloTalleres {
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+    }
+
+    .subtituloTalleres,
+    .subtituloTalleristas {
+        font-size: 2rem;
+    }
+
+    .contenedorCards {
+        gap: 1rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .subtituloTalleres,
+    .subtituloTalleristas {
+        font-size: 1.5rem;
+    }
+
+    .contenedorSubtituloTalleres,
+    .contenedorSubtituloTalleristas {
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+    }
+
+    .contenedorCards {
+        height: 180vh;
+        gap: 0rem;
+        margin-top: 0.5rem;
+    }
 }
