--- a/public/css/components/eventos/ultimos-eventos.css
+++ b/public/css/components/eventos/ultimos-eventos.css
@@ -16,7 +16,7 @@
 .ultimos-eventos-title h2 {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    font-size: clamp(1rem, 2rem, 3rem);
+    font-size: 2rem;
     font-weight: bold;
 }
 
@@ -101,4 +101,66 @@
 .carousel-control-prev, .carousel-control-next {
     width: 5%;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+@media (min-width: 1921px) {
+    .ultimos-eventos-title h2 {
+        font-size: 3rem;
+    }
+
+    .text-event-card {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 1440px) {
+    .title-event-card h2 {
+        font-size: 3rem;
+    }
+
+    .title-event-card {
+        font-size: 1.5rem;
+    }
+
+    .event-card {
+        width: 60%;
+    }
+
+    .ultimos-eventos-title {
+        padding-right: 50px;
+    }
+}
+
+@media (max-width: 768px) {
+    .ultimos-eventos-container {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .ultimos-eventos-title {
+        width: 100%;
+        padding: 0
+    }
+
+    .ultimos-eventos-cards {
+        width: 100%;
+    }
+
+    .title-event-card h2 {
+        font-size: 1.5rem;
+    }
+    
+    .event-card {
+        width: 85%;
+    }
+
+    .carousel-control-prev, .carousel-control-next {
+        width: 10%;
+    }
+}
+
+@media (max-width: 400px) {
+    .event-card {
+        width: 90%;
+    }
 }
