--- a/public/css/components/servicios-academia/objetivos-de-la-incorporacion-de-hci.css
+++ b/public/css/components/servicios-academia/objetivos-de-la-incorporacion-de-hci.css
@@ -1,7 +1,7 @@
 /* Estilo para el contenedor de la sección */
 .objetivosDeLaIncorporacionDeHciContainer {
     width: 100%;
-    /* height: 2147px; */
+    height: auto; 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -10,7 +10,10 @@
 
 /* Estilo del titulo de la sección */
 .objetivosDeLaIncorporacionDeHciTitle {
+    width: 100%;
     margin-top: 80px;
+    height: auto;
+    text-align: center;
     color: #000;
     font-family: Montserrat;
     font-size: 55px;
