--- a/public/css/components/servicios-academia/acceso-a-laboratorio.css
+++ b/public/css/components/servicios-academia/acceso-a-laboratorio.css
@@ -1,6 +1,7 @@
 /* Estilos para el contenedor de la sección */
 .accesoALaboratorioContainer {
     width: 100%;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -10,6 +11,7 @@
 /* Estilos del titulo de la sección */
 .accesoALaboratorioTitle {
     width: 100%;
+    height: auto;
     text-align: center;
     margin-top: 160px;
     margin-bottom: 75px;
@@ -26,6 +28,8 @@
 .pasosParaReservacionTitle {
     margin-top: 119px;
     margin-bottom: 80px;
+    width: 100%;
+    text-align: center;
     color: #000;
     font-family: Montserrat;
     font-size: 55px;
@@ -37,7 +41,7 @@
 
 .pasosParaReservacionCardsContainer {
     width: 100%;
-    height: 629px;
+    height: auto;
     display: flex;
     overflow-x: hidden;
     gap: 40px;
@@ -60,7 +64,7 @@
 /* Estilo de las cards de la subsección "Pasos para reservación" */
 .pasoParaReservacionCard {
     width: 38%;
-    height: 599px;
+    height: auto;
     flex-shrink: 0;
     border-radius: 16px;
     background: #D9D9D9;
@@ -85,6 +89,7 @@
 
 /* Estilo para titulo de la card */
 .pasoParaReservacionCardTitle {
+    width: 100%;
     color: #000;
     text-align: center;
     font-family: Montserrat;
@@ -93,7 +98,16 @@
     font-weight: 400;
     line-height: normal;
 }
+@media (max-width: 1100px){
+    .pasoParaReservacionCardTitle{
+        font-size: 40px;
+    }
 
+    .pasoParaReservacionCard:nth-child(4) .pasoParaReservacionCardTitle {
+        font-size: 35px;
+    }
+
+}
 /* Estilo para el texto de la card */
 .pasoParaReservacionCardText {
     color: #000;
@@ -103,7 +117,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    width: 568px;
+    width: 95%;
 }
 
 @media (max-width: 1500px){
