--- a/public/css/components/servicios-academia/incorporacion-de-hci-en-planes-de-estudio.css
+++ b/public/css/components/servicios-academia/incorporacion-de-hci-en-planes-de-estudio.css
@@ -1,7 +1,7 @@
 /* Estilo del contenedor de la sección */
 .incorporacionDeHciEnPlanesDeEstudioContainer {
     width: 100%;
-    height: 982px;
+    height:auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -19,4 +19,5 @@
     font-weight: 700;
     line-height: normal;
     letter-spacing: 0.55px;
+    text-align: center;
 }
