--- a/public/css/components/servicios-industria/desarrollo-comercial.css
+++ b/public/css/components/servicios-industria/desarrollo-comercial.css
@@ -3,7 +3,7 @@
     margin-top: 160px;
     margin-bottom: 160px;
     width: 100%;
-    height: 616px;
+    height: auto;
     flex-shrink: 0;
     display: flex;
     flex-wrap: wrap;
@@ -38,4 +38,5 @@
     letter-spacing: 0.64px;
     padding-left: 100px;
     padding-right: 100px;
+    padding-bottom: 100px;
 }
