--- a/public/css/components/servicios-industria/desarrollo-de-prototipos.css
+++ b/public/css/components/servicios-industria/desarrollo-de-prototipos.css
@@ -1,7 +1,7 @@
 /* Estilo del contenedor de la sección */
 .desarrolloDePrototiposContainer {
     width: 100%;
-    height: 2355px;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -10,6 +10,8 @@
 
 /* Estilo para el titulo de la sección */
 .desarrolloDePrototiposTitle {
+    width: 100%;
+    text-align: center;
     color: #000;
     font-family: Montserrat;
     font-size: 55px;
