--- a/public/css/components/servicios-industria/estudios-de-usabilidad.css
+++ b/public/css/components/servicios-industria/estudios-de-usabilidad.css
@@ -1,16 +1,18 @@
 /* Contenedor de la sección */
 .estudiosDeUsabilidadContainer {
     width: 100%;
-    height: 964px;
+    height: auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-content: flex-start;
+    margin-bottom: 80px;
 }
 
 /* Estilo para el titulo de la sección */
 .estudiosDeUsabilidadTitle {
     width: 100%;
+    height: auto;
     text-align: center;
     color: #000;
     font-family: Montserrat;
@@ -19,6 +21,6 @@
     font-weight: 700;
     line-height: normal;
     letter-spacing: 0.55px;
-    height: 55px;
+    
     margin-bottom: 88px;
 }
