--- a/public/css/components/servicios-industria/servicios-para-la-industria.css
+++ b/public/css/components/servicios-industria/servicios-para-la-industria.css
@@ -1,7 +1,7 @@
 /* Contenedor de la sección */
 .serviciosParaLaIndustriaContainer{
     width: 100%;
-    height: 597px;
+    height: auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -10,11 +10,13 @@
 
 /* Titulo de la sección */
 .serviciosParaLaIndustriaTitle {
+    width: 100%;
+    text-align: center;
     margin-top: 160px;
-    width: 756px;
-    height: 67px;
+    margin-bottom: 60px;    
+    height: auto;
     color: #000;
-    text-align: justify;
+    
     font-family: Montserrat;
     font-size: 55px;
     font-style: normal;
@@ -26,7 +28,7 @@
 /* Descripción de la sección */
 .serviciosParaLaIndustriaDescription{
     width: 80%;
-    height: 312px;
+    height: auto;
     color: #000;
     text-align: center;
     font-family: Montserrat;
