--- a/public/css/components/servicios-industria/tecnicas-de-estudio-de-usabilidad.css
+++ b/public/css/components/servicios-industria/tecnicas-de-estudio-de-usabilidad.css
@@ -1,7 +1,7 @@
 /* Estilos para el contenedor de la sección */
 .tecnicasDeEstudioDeUsabilidadContainer {
     width: 100%;
-    height: 1171px;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -23,7 +23,7 @@
 /* Estilo del titulo de la sección */
 .tecnicasDeEstudioDeUsabilidadTitle {
     width: 100%;
-    height: 134px;
+    height: auto;
     flex-shrink: 0;
     color: #FFF;
     text-align: center;
@@ -52,7 +52,7 @@
 /* Estilo del contenedor de las cards de la sección */
 .tecnicasDeEstudioDeUsabilidadCardsContainer {
     width: 100%;
-    height: 473px;
+    height: auto;
     display: flex;
     overflow-x: hidden; /* Ocultar la barra de desplazamiento por defecto */
     gap: 6px;
