--- a/public/css/main.css
+++ b/public/css/main.css
@@ -466,6 +466,7 @@
 .contenidousalabtxt {
     width: 90%;
     height: 152px;
+    
     flex-shrink: 0;
     color: #FFFCFC;
     text-align: justify;
@@ -479,7 +480,7 @@
 @media (max-width:1400px){
     .contenidousalabtxt{
         width: 100%; /* Ajusta el ancho para pantallas más pequeñas */
-        height: 50%;
+        height: auto;
         justify-content: center; /* Mantiene el contenido centrado */
         font-size: 25px;
     }
