--- a/public/css/components/eventos/cardsEventos.css
+++ b/public/css/components/eventos/cardsEventos.css
@@ -8,7 +8,7 @@
 }
 
 .ContenedorSVG {
-    width: 100%;
+    width: 101%;
     height: 45%;
     position: absolute;
     top: 0;
@@ -16,7 +16,7 @@
 }
 
 .ContenedorSVG svg {
-    width: 102%;
+    width: 100%;
     height: 100%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     fill-opacity: 0.90;
@@ -58,23 +58,37 @@
     }
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
     .contenedorCard {
         flex: 1 1 calc(50% - 4rem);
-        max-width: 35%;
+        max-width: 30%;
         height: calc(50% - 2rem);
+        min-height: 360px;
+    }
+
+    .contenedorTituloCard {
+        margin-top: 0.2rem;
+        padding: 0.2rem 1rem;
     }
 }
 
-@media (max-width: 768px) {
-    .contenedorCard {
-        flex: 1 1 calc(50% - 1rem);
-        max-width: 50%;
-        height: calc(50% - 2rem);
+@media (min-width: 821px) and (max-width: 1024px) {
+    .tituloCard {
+        font-size: 1.6rem;
     }
+}
 
+@media (min-width: 768px) and (max-width: 820px) {
     .tituloCard {
         font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .contenedorCard {
+        flex: 1 1 calc(50% - 1rem);
+        max-width: 40%;
+        height: calc(50% - 3rem);
     }
 
     .contenedorTituloCard {
@@ -83,10 +97,10 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (min-width: 375px) and (max-width: 430px) {
     .contenedorCard {
         flex: 1 1 100%;
-        max-width: 100%; 
+        max-width: 80%; 
         height: calc(25% - 2rem);
     }
 
@@ -95,7 +109,7 @@
     }
 
     .contenedorTituloCard {
-        margin-top: 0.6rem;
+        margin-top: 0.3rem;
         padding: 0.6rem 1.2rem;
     }
 }
