--- a/public/css/components/eventos/concursos.css
+++ b/public/css/components/eventos/concursos.css
@@ -27,18 +27,49 @@
 .contenedorslider1 {
     width: 100%;
     flex-shrink: 0;
-    margin-top: 80px;
+    margin-top: 5rem;
 }
 
 .contenedorslider2 {
     width: 100%;
     flex-shrink: 0;
     margin-top: 80px;
-    margin-bottom: 160px;
+    margin-bottom: 10rem;
 }
 
 @media (min-width: 1921px) {
     .subtituloConcursos {
         font-size: 4rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .contenedorslider1 {
+        margin-top: 2rem;
+    }
+
+    .contenedorslider2 {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+}
+
+@media (min-width: 375px) and (max-width: 430px) {
+    .contenedorSubtituloConcursos {
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+    }
+
+    .subtituloConcursos {
+        font-size: 1.5rem;
+    }
+
+    .contenedorslider1 {
+        margin-top: 0.5rem;
+    }
+
+    .contenedorslider2 {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 }
