--- a/public/css/components/eventos/cursos.css
+++ b/public/css/components/eventos/cursos.css
@@ -93,13 +93,17 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (min-width: 375px) and (max-width: 430px) {
     .contenedorSubtituloCursos {
         margin-bottom: 1rem;
         margin-top: 1rem;
     } 
 
     .subtitulo {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
+    }
+
+    .separadorCursos {
+        margin-top: 1rem;
     }
 }
