--- a/public/css/components/eventos/lightBox_carousel.css
+++ b/public/css/components/eventos/lightBox_carousel.css
@@ -20,7 +20,6 @@
 }
 
 /* --------- Animaciones del carousel --------- */
-
 /* Reducir el brillo de la imagen */
 .slide-image.dimmed {
     filter: brightness(0.5);
@@ -33,22 +32,22 @@
 }
 
 .slide-title.shrink {
-    transform: translateX(-28%) scale(0.7);
-    /*opacity: 0.7;*/
+    transform: translateX(-6%) scale(0.7);
+    width: 60%;
+    /* opacity: 0.7; */
 }
 
 /* Animaciones para el texto adicional */
 .extra-text {
-    width: 50%;
-    /* height: auto; */
+    width: 40%;
     height: 40%;
     transition: opacity 0.5s ease, transform 0.5s ease;
     opacity: 0;
     font-size: 1rem;
     color: white;
     position: absolute;
-    right: 5%; /* Ajustar según diseño */
-    margin-top: 65px;/*top: 50%; /* Centrado vertical */
+    right: 5%;
+    margin-top: 3rem;
     transform: translateY(-50%) translateX(20%); /* Desplazamiento inicial */
     text-align: center;
     font-family: Montserrat;
@@ -62,13 +61,12 @@
 .extra-text.show {
     opacity: 1;
     transform: translateY(-50%) translateX(0); /* Animación hacia su posición final */
-
 }
 
 .btn-mas-info {
     /* Layout */
     width: 40%;
-    height: 60px;
+    height: auto;
     flex-shrink: 0;
     
     /* Style */
@@ -80,14 +78,15 @@
     border: none;
     color: #FFF;
     font-family: Montserrat;
-    font-size: 24px;
+    font-size: 1rem;
+    padding: 1rem 0;
     font-style: normal;
     text-align: center;
     font-weight: 400;
     line-height: normal;
     
     /* Position */
-    margin-top: 35px;
+    margin-top: 1.5rem;
     cursor: pointer;
     display: block;
     margin-left: auto;
@@ -111,7 +110,7 @@
     display: none;
 }
 
-@media (min-width: 1921px) {
+@media (min-width: 1441px) /* and (max-width: 1921px) */ {
     .tipografiaImageText {
         font-size: 2.5rem;
     }
@@ -119,44 +118,121 @@
     .extra-text {
         font-size: 1.2rem;
     }
+
+    .more-width {
+        width: 54%;
+    }
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 1025px) and (max-width: 1440px) {
     .tipografiaImageText {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
     }
     
     .extra-text {
         font-size: 0.8rem;
+        width: 50%;
+        height: 50%;
     }
 }
 
-@media (max-width: 768px) {
-    .tipografiaImageText {
-        font-size: 1.2rem;
-    }
-    
-    .carousel-item img {
-        height: 30vh;
-        object-fit: cover;
-    }
-
-    .extra-text {
-        font-size: 1rem; /* Ajustar tamaño del texto adicional */
-        right: 5%; /* Ajustar posición para pantallas pequeñas */
-    }
-
+/* --------- ESTO ES PARA TABLETS ---------- */
+@media (min-width: 821px) and (max-width: 1024px) {
     .slide-title.shrink {
         display: none;
     }
 
+    .carousel-item img {
+        min-height: 18rem;
+    }
+
+    .tipografiaImageText {
+        font-size: 1.8rem;
+    }
+
     .extra-text {
-        width: 85%;
+        width: 80%;
+        left: 10%;
+        font-size: 1.2rem;
+    }
+
+    /* .more-width {
+        width: 95%;
+    } */
+}
+
+@media (min-width: 768px) and (max-width: 820px) {
+    .slide-title.shrink {
+        display: none;
+    }
+
+    .carousel-item img {
+        min-height: 15rem;
+        object-fit: cover;
+    }
+
+    .tipografiaImageText {
+        font-size: 1.6rem;
+    }
+
+    .extra-text {
+        width: 80%;
+        left: 10%;
+        font-size: 0.9rem;
     }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 768px) {
+    .carousel-item img {
+        /* height: 25vh; */
+        object-fit: cover;
+    }
+
+    .tipografiaImageText {
+        font-size: 1.2rem;
+    }
+    
+    .extra-text {
+        width: 80%;
+        right: 10%;
+    }
+
+    .btn-mas-info {
+        font-size: 0.8rem;
+        padding: 0.8rem 0;
+        margin-top: 0.5rem;
+    }
+}
+
+@media (min-width: 375px) and (max-width: 430px) {
+    .slide-title.shrink {
+        display: none;
+    }
+
     .tipografiaImageText {
         font-size: 0.8rem;
+    }
+
+    .carousel-item img {
+        /* min-height: 200px; */
+        min-height: 10rem;
+    }
+
+    .extra-text {
+        font-size: 0.6rem;
+    }
+
+    .more-width {
+        width: 95%;
+        left: 1%;
+    }
+
+    .bigger-title {
+        font-size: 2rem;
+    }
+
+    .btn-mas-info {
+        font-size: 0.5rem;
+        padding: 0.5rem 0;
     }
 }
