--- a/public/css/components/eventos/talleres.css
+++ b/public/css/components/eventos/talleres.css
@@ -62,6 +62,8 @@
     height: 45vh;
     margin-top: 4rem;
     gap: 1rem;
+
+    border: solid purple 5px;
 }
 
 /************************Estilo para el separador a final de la seccion *********************/
@@ -70,7 +72,7 @@
     width: 1320px;
     height: 2px;
     background: #DADADA;
-    margin-top: 160px;
+    margin-top: 10rem;
 }
 
 @media (min-width: 1921px) {
@@ -109,10 +111,10 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (min-width: 375px) and (max-width: 430px) {
     .subtituloTalleres,
     .subtituloTalleristas {
-        font-size: 1.5rem;
+        font-size: 1.8rem;
     }
 
     .contenedorSubtituloTalleres,
@@ -125,5 +127,9 @@
         height: 180vh;
         gap: 0rem;
         margin-top: 0.5rem;
+    }
+
+    .separadorTalleres {
+        margin-top: 1rem;
     }
 }
