--- a/public/css/components/investigacion/lineas-de-investigacion.css
+++ b/public/css/components/investigacion/lineas-de-investigacion.css
@@ -30,7 +30,7 @@
 .lineas-de-investigacion-list {
     display: flex;
     flex-direction: column;
-    overflow-y: hidden;
+    overflow-y: auto;
     width: 1257px;
     height: 876px;
     flex-shrink: 0;
@@ -94,4 +94,134 @@
     letter-spacing: 0.24px;
     margin-top: 0px;
     margin-left: 89px;
+}
+
+/***************************tablet******************************************/
+@media (min-width: 768px) and (max-width: 1024px) and (min-height: 512px) and (max-height: 1366px) {
+
+    .lineas-de-investigacion-container {
+        height: 100%;
+        max-height: 100vh;
+        overflow-y: auto;
+    }
+/* Contenedor de la sección "Líneas de Investigación"*/
+.lineas-de-investigacion-list {
+    max-height: 500px; /* ajusta según necesidad */
+    overflow-y: auto;
+}
+/* Titulo "Líneas de Investigación" */
+.lineas-de-investigacion-title {
+    margin: 75px auto 76px auto; /* top, right/left, bottom */
+    width: 677px;
+    text-align: center;
+    font-size: 30px;
+}
+
+/* Contenedor para lista de líneas de investigación */
+.lineas-de-investigacion-list {
+    width: 100%;
+    height: 876px;
+    gap: 50px;
+}
+
+
+
+/* Tarjeta para las líneas de investigación */
+.line-of-research-card {
+    width: 100%;
+    height: 20%;
+    display: flex;
+}
+
+/* Titulo de la línea de investigación */
+.line-of-research-card-title {
+ 
+    width:25%;
+    height: 30%;
+    font-size: 15px;
+    margin-top: 3%;
+    margin-left: 5%;
+}
+
+/* Separador entre el titulo y la descripción */
+.card-line {
+    width: 2px;
+    height: 100%;
+    background: #FFF;
+    margin-left: 5%;
+}
+
+/* Descripción de la línea de investigación */
+.line-of-research-card-description {
+    width: 50%;
+    height: 100%;
+    font-size: 12px;
+    font-style: normal;
+    margin-left: 89px;
+}
+
+}
+
+@media (max-width: 430px) {
+    .lineas-de-investigacion-container {
+        height: 100%;
+        max-height: 100vh;
+        overflow-y: auto;
+    }
+/* Contenedor de la sección "Líneas de Investigación"*/
+.lineas-de-investigacion-list {
+    max-height: 500px; /* ajusta según necesidad */
+    overflow-y: auto;
+}
+/* Titulo "Líneas de Investigación" */
+.lineas-de-investigacion-title {
+    margin: 75px auto 76px auto; /* top, right/left, bottom */
+    width: 100%;
+    text-align: center;
+    font-size: 7vw;
+}
+
+/* Contenedor para lista de líneas de investigación */
+.lineas-de-investigacion-list {
+    width: 100%;
+    height: 876px;
+    gap: 50px;
+}
+
+
+
+/* Tarjeta para las líneas de investigación */
+.line-of-research-card {
+    width: 100%;
+    height: 20%;
+    display: flex;
+}
+
+/* Titulo de la línea de investigación */
+.line-of-research-card-title {
+ 
+    width:25%;
+    height: 30%;
+    font-size: 3vw;
+    margin-top: 3%;
+    margin-left: 5%;
+}
+
+/* Separador entre el titulo y la descripción */
+.card-line {
+    width: 2px;
+    height: 100%;
+    background: #FFF;
+    margin-left: 5%;
+}
+
+/* Descripción de la línea de investigación */
+.line-of-research-card-description {
+    width: 50%;
+    height: 100%;
+    font-size: 2vw;
+    font-style: normal;
+    margin-left: 8px;
+}
+
 }
