--- a/public/css/components/investigacion/publicaciones.css
+++ b/public/css/components/investigacion/publicaciones.css
@@ -2,19 +2,19 @@
 
     .publicaciones-container {
         width: 100%;
-        max-width: 1728px;
+        margin-top: 50px;
         height: 1180px;
         display: grid;
     }   
 /* Titulo "Publicaciones" */
 .publicaciones-title {
     justify-self: center;
-    width: 399px;
+    width: 30%;
     height: 60px;
     flex-shrink: 0;
     color: #000;
     font-family: Montserrat;
-    font-size: 55px;
+    font-size: 5vw;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -27,12 +27,12 @@
     width: 1358px;
     height: 1040px;
     /* gap: 40px; Se quita el gap para simular una sola linea*/
-    overflow-y: hidden;
+    overflow-y: auto;
     /* scrollbar-width: none; */
     /* position: relative; */
     display: flex;
     flex-direction: column;
-}
+} 
 
 /* Mostrar la barra de desplazamiento al hacer hover */
 .publicaciones-list:hover {
@@ -115,4 +115,141 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.2px;
+}
+
+
+/***************************tablet******************************************/
+@media (min-width: 768px) and (max-width: 1024px) and (min-height: 512px) and (max-height: 1366px) {
+   
+      
+/* Titulo "Publicaciones" */
+.publicaciones-title {
+    font-size: 40px;  
+}
+
+
+/* Contenedor para la lista de publicaciones */
+.publicaciones-list {
+   
+    width: 100%;
+    height: 1040px;
+  
+}
+
+.vertical-line { 
+    left: 40%;
+}
+
+.publication-card {
+    width: 100%;
+    height: 25%;
+}
+
+/* Contenedor de la imagen de la publicación */
+.image-publication-card {
+    top: 5px;
+    left: 0px;
+    width: 40%;
+    height: 70%;
+}
+
+/* Contenedor del contenido de la publicación */
+.publication-card-content {
+    top: 5px;
+    width: 50%;
+    height: 80%;
+}
+
+/* Titulo de la publicación */
+.publication-card-title {
+  
+    font-size: 18px;
+   
+}
+
+/* "Subtitulo de la publicación" */
+.publication-card-subtitle {
+  
+    font-size: 12px;
+   
+}
+
+/* Autores de la publicación */
+.publication-card-authors {
+   
+    font-size: 10px;
+   
+}
+
+}
+
+@media (max-width: 430px) {
+
+    .publicaciones-container {
+        height: 900px;
+        margin-top: 10px;
+      
+    }  
+/* Titulo "Publicaciones" */
+.publicaciones-title {
+    height: 20px;
+    font-size: 5vw;
+    margin-bottom: 10px;
+}
+
+
+/* Contenedor para la lista de publicaciones */
+.publicaciones-list {
+   
+    width: 100%;
+    height: 900px;
+  
+}
+
+.vertical-line { 
+    left: 40%;
+}
+
+.publication-card {
+    width: 100%;
+    height: 15%;
+}
+
+/* Contenedor de la imagen de la publicación */
+.image-publication-card {
+    top: 15px;
+    left: 25px;
+    width: 25%;
+    height: 65%;
+}
+
+/* Contenedor del contenido de la publicación */
+.publication-card-content {
+    top: 0px;
+    width: 50%;
+    right: 8px;
+    height: 100%;
+}
+
+/* Titulo de la publicación */
+.publication-card-title {
+  
+    font-size: 2.3vw;
+   
+}
+
+/* "Subtitulo de la publicación" */
+.publication-card-subtitle {
+  
+    font-size: 1.8vw;
+   
+}
+
+/* Autores de la publicación */
+.publication-card-authors {
+    margin-top: 8px;
+    font-size: 1.5vw;
+   
+}
+
 }
