--- a/public/css/components/eventos/eventos.css
+++ b/public/css/components/eventos/eventos.css
@@ -45,6 +45,7 @@ body {
 
 .titulousalabtxt {
     font-size: 3rem;
+    font-weight: bolder;
 }
 
 .contenidousalab {
@@ -61,9 +62,9 @@ body {
     max-width: 100%;
     max-height: 100%;
     height: 100%;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     line-height: normal;
-    padding: 0;
+    padding: 1.2rem 5rem;
     box-sizing: border-box;
 }
 
@@ -81,17 +82,17 @@ body {
     }
 }
 
-@media (min-width: 1024px) and (max-width: 1440px) {
+/* @media (min-width: 1025px) and (max-width: 1440px) {
     .contenidousalab {
         padding: 1rem 1.5rem;
     }
 
     .contenidousalabtxt {
-        font-size: 1.1rem;
+        font-size: 1.5rem;
     }
-}
+} */
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1024px) {
     .titulousalabtxt {
         font-size: 2rem;
     }
